samples/_failures_safe/1761243526_4dfd5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5945ef40.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_5945ef40.c:161:12: error: expected identifier or ‘(’ at end of input
  161 |     struct Graph
      |            ^~~~~
./samples/SAFE/__tmp_5945ef40.c:161:12: error: expected declaration or statement at end of input
